--- a/shopand/package.json
+++ b/shopand/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "shopand",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
-    "express": "~4.12.2",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
-  }
+    "name": "shopand",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "./node_modules/.bin/supervisor -e node,js,css,html ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.12.0",
+        "cookie-parser": "~1.3.4",
+        "debug": "~2.1.1",
+        "express": "~4.12.2",
+        "morgan": "~1.5.1",
+        "serve-favicon": "~2.2.0",
+        "supervisor": "*",
+        "hogan-express": "*",
+        "mongodb": "*",
+        "mongoose": "*",
+        "request": "*",
+        "cheerio": "*",
+        "async": "*",
+        "iconv-lite": "*",
+        "fs": "*",
+        "string_decoder": "*",
+        "express-session": "*",
+        "passport": "*",
+        "passport-local": "*",
+        "passport-local-mongoose": "*"
+    }
 }
